# Vesta

./: .editorconfig  .gitignore  Directory.Build.props  PLANNING.md  README.md  Vesta.sln
.github/: copilot-instructions.md
.github/infra/: main.bicep
.github/workflows/: main_vestaserver.yml
VestaCore/: Class1.cs  VestaCore.csproj
clients/vesta-client-py/: README.md  pyproject.toml
clients/vesta-client-py/tests/: test_device_groups.py  test_outbox.py  test_projections.py  test_relay.py
clients/vesta-client-py/vesta_client/: __init__.py  connection.py  device_groups.py  events.py  identity.py  projections.py  relay.py  signing.py  storage.py  types.py
clients/vesta-client-ts/: README.md  package-lock.json  package.json
docs/: README.md  events.md  projections.md  protocol.md  server-configuration.md
examples/ChatRoom.CLI/: ChatRoom.CLI.csproj  Program.cs
examples/Presence.CLI/: PresenceState.cs  Program.cs
examples/TodoList.CLI/: Program.cs  TodoList.CLI.csproj  TodoListState.cs
examples/chess-web/: README.md  index.html  package-lock.json  package.json  tsconfig.json
examples/clipboard-ts/: package-lock.json  package.json
examples/collab-edit-py/: main.py
examples/colorwheel-py/: main.py  requirements.txt
src/VestaClient/: VestaClient.csproj  VestaConnection.cs  VestaLimitNotice.cs  VestaTestClient.cs
src/VestaCore/: VestaCore.csproj
src/VestaServer/: Program.cs  VestaServer.csproj  appsettings.Development.json  appsettings.json
tests/VestaClient.Tests/: EndToEndRoundTripTests.cs  FederationClientTests.cs  OfflineOutboxSyncTests.cs  (+6 more)
(+160 files in other folders)
